Run make get-source

--- a/site/notebooks/how_to/assign_scores_complete_tutorial.ipynb
+++ b/site/notebooks/how_to/assign_scores_complete_tutorial.ipynb
@@ -435,7 +435,7 @@
    "outputs": [],
    "source": [
     "# Assign Brier Score for XGBoost model\n",
-    "vm_test_ds.assign_scores(metrics = \"validmind.scorer.classification.BrierScore\", model = vm_xgb_model)\n",
+    "vm_test_ds.assign_scores(metrics = \"validmind.scorers.classification.BrierScore\", model = vm_xgb_model)\n",
     "\n",
     "print(\"After assigning Brier Score:\")\n",
     "print(f\"New column added: {vm_test_ds.df.columns}\")\n",
@@ -465,7 +465,7 @@
    "outputs": [],
    "source": [
     "# Assign Brier Score for XGBoost model\n",
-    "vm_test_ds.assign_scores(metrics = \"validmind.scorer.classification.OutlierScore\", model = vm_xgb_model)\n",
+    "vm_test_ds.assign_scores(metrics = \"validmind.scorers.classification.OutlierScore\", model = vm_xgb_model)\n",
     "\n",
     "print(\"After assigning Score With Confidence:\")\n",
     "print(f\"New column added: {vm_test_ds.df.columns}\")\n",
@@ -480,7 +480,7 @@
    "outputs": [],
    "source": [
     "# Assign Brier Score for XGBoost model\n",
-    "vm_test_ds.assign_scores(\"validmind.scorer.classification.OutlierScore\")\n",
+    "vm_test_ds.assign_scores(\"validmind.scorers.classification.OutlierScore\")\n",
     "\n",
     "print(\"After assigning Score With Confidence:\")\n",
     "print(f\"New column added: {vm_test_ds.df.columns}\")\n",
@@ -507,9 +507,9 @@
    "source": [
     "# Assign multiple classification metrics for the Random Forest model\n",
     "scorer = [\n",
-    "    \"validmind.scorer.classification.BrierScore\",\n",
-    "    \"validmind.scorer.classification.LogLoss\",\n",
-    "    \"validmind.scorer.classification.Confidence\"\n",
+    "    \"validmind.scorers.classification.BrierScore\",\n",
+    "    \"validmind.scorers.classification.LogLoss\",\n",
+    "    \"validmind.scorers.classification.Confidence\"\n",
     "]\n",
     "\n",
     "vm_test_ds.assign_scores(metrics = scorer, model = vm_rf_model)\n",
@@ -540,14 +540,14 @@
    "outputs": [],
    "source": [
     "# Assign LogLoss\n",
-    "vm_test_ds.assign_scores(metrics = \"validmind.scorer.classification.LogLoss\", model = vm_xgb_model, eps = 1e-16)\n",
+    "vm_test_ds.assign_scores(metrics = \"validmind.scorers.classification.LogLoss\", model = vm_xgb_model, eps = 1e-16)\n",
     "\n",
     "# We can also assign with different parameters by calling assign_scores again\n",
     "# Note: This will overwrite the previous column with the same name\n",
     "print(\"LogLoss assigned successfully\")\n",
     "\n",
     "# Let's also assign BrierScore and Confidence\n",
-    "vm_test_ds.assign_scores(metrics = [\"validmind.scorer.classification.BrierScore\",\"validmind.scorer.classification.Confidence\"], model = vm_xgb_model)\n",
+    "vm_test_ds.assign_scores(metrics = [\"validmind.scorers.classification.BrierScore\",\"validmind.scorers.classification.Confidence\"], model = vm_xgb_model)\n",
     "\n",
     "print(\"BrierScore and Confidence assigned successfully\")\n",
     "\n",
@@ -577,10 +577,10 @@
    "source": [
     "# Let's assign a comprehensive set of metrics for both models\n",
     "comprehensive_metrics = [\n",
-    "    \"validmind.scorer.classification.BrierScore\",\n",
-    "    \"validmind.scorer.classification.LogLoss\",\n",
-    "    \"validmind.scorer.classification.Confidence\",\n",
-    "    \"validmind.scorer.classification.Correctness\"\n",
+    "    \"validmind.scorers.classification.BrierScore\",\n",
+    "    \"validmind.scorers.classification.LogLoss\",\n",
+    "    \"validmind.scorers.classification.Confidence\",\n",
+    "    \"validmind.scorers.classification.Correctness\"\n",
     "]\n",
     "\n",
     "# Assign for XGBoost model\n",
@@ -620,11 +620,11 @@
     "print(\"Adding individual metrics...\")\n",
     "\n",
     "# Add Brier Score - measures accuracy of probabilistic predictions per row\n",
-    "vm_test_ds.assign_scores(metrics = \"validmind.scorer.classification.BrierScore\", model = vm_xgb_model)\n",
+    "vm_test_ds.assign_scores(metrics = \"validmind.scorers.classification.BrierScore\", model = vm_xgb_model)\n",
     "print(\"Added Brier Score - lower values indicate better calibrated probabilities\")\n",
     "\n",
     "# Add Log Loss - measures how well the predicted probabilities match true labels per row\n",
-    "vm_test_ds.assign_scores(metrics = \"validmind.scorer.classification.LogLoss\", model = vm_xgb_model)\n",
+    "vm_test_ds.assign_scores(metrics = \"validmind.scorers.classification.LogLoss\", model = vm_xgb_model)\n",
     "print(\"Added Log Loss - lower values indicate better probability estimates\")\n",
     "\n",
     "# Create a comparison summary showing first few rows of individual metrics\n",
@@ -791,7 +791,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ValidMind Library",
+   "display_name": "ValidMind (Poetry)",
    "language": "python",
    "name": "validmind"
   },
