--- a/site/notebooks/code_samples/agents/langgraph_agent_simple_banking_demo.ipynb
+++ b/site/notebooks/code_samples/agents/langgraph_agent_simple_banking_demo.ipynb
@@ -158,7 +158,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install -q validmind "
+    "%pip install -q \"validmind[llm]\" "
    ]
   },
   {
@@ -549,7 +549,7 @@
    "outputs": [],
    "source": [
     "from validmind.models import Prompt\n",
-    "from validmind.scorer.llm.deepeval import extract_tool_calls_from_agent_output, _convert_to_tool_call_list\n",
+    "from validmind.scorers.llm.deepeval import extract_tool_calls_from_agent_output, _convert_to_tool_call_list\n",
     "def banking_agent_fn(input):\n",
     "    \"\"\"\n",
     "    Invoke the banking agent with the given input.\n",
@@ -1018,7 +1018,7 @@
    "source": [
     "\n",
     "vm_test_dataset.assign_scores(\n",
-    "    metrics = \"validmind.scorer.llm.deepeval.PlanQuality\",\n",
+    "    metrics = \"validmind.scorers.llm.deepeval.PlanQuality\",\n",
     "    input_column = \"input\",\n",
     "    actual_output_column = \"banking_agent_model_prediction\",\n",
     "    tools_called_column = \"banking_agent_model_tool_called\",\n",
@@ -1044,7 +1044,7 @@
    "outputs": [],
    "source": [
     "vm_test_dataset.assign_scores(\n",
-    "    metrics = \"validmind.scorer.llm.deepeval.PlanAdherence\",\n",
+    "    metrics = \"validmind.scorers.llm.deepeval.PlanAdherence\",\n",
     "    input_column = \"input\",\n",
     "    actual_output_column = \"banking_agent_model_prediction\",\n",
     "    expected_output_column = \"expected_output\",\n",
@@ -1073,7 +1073,7 @@
    "outputs": [],
    "source": [
     "vm_test_dataset.assign_scores(\n",
-    "    metrics = \"validmind.scorer.llm.deepeval.ToolCorrectness\",\n",
+    "    metrics = \"validmind.scorers.llm.deepeval.ToolCorrectness\",\n",
     "    input_column = \"input\",\n",
     "    actual_output_column = \"banking_agent_model_prediction\",\n",
     "    tools_called_column = \"banking_agent_model_tool_called\",\n",
@@ -1101,7 +1101,7 @@
    "outputs": [],
    "source": [
     "vm_test_dataset.assign_scores(\n",
-    "    metrics = \"validmind.scorer.llm.deepeval.ArgumentCorrectness\",\n",
+    "    metrics = \"validmind.scorers.llm.deepeval.ArgumentCorrectness\",\n",
     "    input_column = \"input\",\n",
     "    actual_output_column = \"banking_agent_model_prediction\",\n",
     "    tools_called_column = \"banking_agent_model_tool_called\",\n",
@@ -1130,7 +1130,7 @@
    "outputs": [],
    "source": [
     "vm_test_dataset.assign_scores(\n",
-    "    metrics = \"validmind.scorer.llm.deepeval.TaskCompletion\",\n",
+    "    metrics = \"validmind.scorers.llm.deepeval.TaskCompletion\",\n",
     "    input_column = \"input\",\n",
     "    actual_output_column = \"banking_agent_model_prediction\",\n",
     "    agent_output_column = \"banking_agent_model_output\",\n",
