--- a/site/guide/access/accessing-validmind.qmd
+++ b/site/guide/access/accessing-validmind.qmd
@@ -11,6 +11,7 @@ listing:
     fields: [title, description]
     contents:
     - register-with-validmind.qmd
+    - sign-up-via-aws-marketplace.qmd
     - log-in-to-validmind.qmd
 aliases:
   - /guide/configuration/accessing-validmind.html
