Add excluded categories for latest features on home page

--- a/site/index.qmd
+++ b/site/index.qmd
@@ -18,6 +18,10 @@ listing:
     - ../releases/validmind-library/**/pr*.qmd
   include:
     categories: highlight
+  exclude:
+    categories: 
+      - "admin ui"
+      - "hidden"
   fields: [date, title]
   sort: "date desc"
   max-description-length: 300
