--- a/site/guide/access/sign-up-via-aws-marketplace.qmd
+++ b/site/guide/access/sign-up-via-aws-marketplace.qmd
@@ -71,7 +71,7 @@ When you subscribe to {{< var vm.product >}} via AWS Marketplace, your usage is 
    - A new {{< var vm.product >}} organization
    - Administrator access for the first user
 
-6. After registration completes, you are redirected to the {{< var vm.product >}} login page.
+6. After registration completes, you are redirected to the {{< var vm.product >}} login page.[^2]
 
    Sign in using the account you just created.
 
@@ -92,3 +92,5 @@ Take a guided tour of {{< var vm.product >}} and discover how the platform helps
 <!-- FOOTNOTES -->
 
 [^1]: [{{< var vm.product >}} on AWS Marketplace](https://aws.amazon.com/marketplace/pp/prodview-btq2yylkfmqgq)
+
+[^2]: [Log in to {{< var vm.product >}}](/guide/access/log-in-to-validmind.qmd)
