--- a/site/guide/attestation/_configure-attestations.qmd
+++ b/site/guide/attestation/_configure-attestations.qmd
@@ -115,34 +115,46 @@ a. Under Relevant Attestation Fields, drag model inventory fields between column
 
 b. Optional: Reorder the fields to change how they display in the attestation.
 
-### 5. Edit questionnaire templates
+### 5. Add questionnaire fields
 
-Attestation questionnaires should confirm that key controls, governance processes, and documentation requirements have been followed. 
+Define the structured fields that submitters fill out as part of the attestation process. Each field becomes a question in the questionnaire and appears as a column in the Responses tab for consolidated reporting.
 
 ::: {.column-margin .callout}
 
 ### Tip
 
-Work with your model risk management team to create a template that accurately reflects your organization's attestation requirements.
+Work with your model risk management team to create fields that accurately reflect your organization's attestation requirements.
 
 ___ 
 
 [How do I create meaningful attestation questionnaires?](/guide/attestation/working-with-attestations.qmd#how-do-i-create-meaningful-attestation-questionnaires)
 :::
 
-a. Under Questionnaire Template, click the template area to edit. You can add rich text fields such as:
+a. Under Questionnaires, click **{{< fa plus >}} Add Field**.
 
-   - Instructions 
-   - Links to guidelines
-   - Checkboxes
-   - Lists 
-   - Other custom elements
+b. Configure the field:
 
-   ![A screenshot of the questionnaire template editor](/guide/attestation/edit-questionnaire-template.gif){width=100% fig-alt="An animation of the questionnaire template editor showing the process of adding a question about documentation of compliance to the template with the instructions to confirm that required documentation, such as model documentation, validation reports, and change logs, has been completed." .screenshot}
+   - **[field type]{.smallcaps}** — Select the input type:
+     - Single Line Text
+     - Multi Line Text
+     - Checkbox
+     - Dropdown
+     - Number
+     - Date
+   - **[field label]{.smallcaps}** — Enter the question or prompt shown to submitters
+   - **[description]{.smallcaps}** — Optional context about the field
+   - **[help text]{.smallcaps}** — Optional guidance displayed to users
+   - **[required field]{.smallcaps}** — Toggle to require submitters to complete this field before submission
 
-b. After you complete your edits, click **Save**.
+   ![Add Field dialog](/guide/attestation/attestations-add-field.png){width=80% fig-alt="Add Field dialog showing field type, label, description, help text, and required field options." .screenshot}
 
-The attestation questionnaire is now ready to be used in future attestation instances, to be completed by submitters, reviewed by reviewers, and signed off by approvers.
+c. Click **Add Field**.
+
+d. Repeat to add additional fields as needed.
+
+e. Optional: Reorder fields by dragging them to change the order in which they appear to submitters.
+
+Questionnaire fields are available immediately for new attestation instances. Submitters see structured inputs for each field, and responses are collected consistently across all submissions.
 
 :::
 
@@ -190,16 +202,14 @@ a. Under Relevant Attestation Fields, drag model inventory fields between column
 
 a. Optional: Reorder the fields to change how they display in the attestation.
 
-#### Edit questionnaire templates
+#### Add questionnaire fields
 
-a. Under Questionnaire Template, click the template area to edit. You can add rich text fields such as:
+a. Under Questionnaires, click **{{< fa plus >}} Add Field**.
 
-   - Instructions 
-   - Links to guidelines
-   - Checkboxes
-   - Lists 
-   - Other custom elements
+a. Configure the field type, label, description, help text, and whether it is required.
 
-a. After you complete your edits, click **Save**.
+a. Click **Add Field**.
+
+a. Repeat to add additional fields as needed.
 
 ::::
