--- a/site/guide/attestation/approve-attestations.qmd
+++ b/site/guide/attestation/approve-attestations.qmd
@@ -24,15 +24,14 @@ As an approver, you provide the final sign-off on attestation questionnaires tha
 
 ## Steps
 
-1. In the left sidebar, click **{{< fa inbox >}} My Inbox**.
+1. Access the attestation for approval using one of these methods:
 
-2. Under **Tasks**, locate the attestation with a **Reviewed** status.
+   - In the left sidebar, click **{{< fa clipboard-check >}} Attestations**, then click on the submission in the **Reviewed** column.
+   - In the left sidebar, click **{{< fa inbox >}} My Inbox**, then under **Tasks**, locate the attestation with a **Reviewed** status.
 
-3. Review the attestation questionnaire to verify it is ready for approval.
+2. Review the questionnaire responses and model context to verify the attestation is ready for approval.
 
-4. Click **Sign Off**.
-
-5. Document the status change to [**{{< fa clipboard-check >}} Signed Off**]{.bubble} in the [**notes**]{.small-caps} field and click **Confirm**.
+3. Click **Sign Off**.
 
 After you sign off, the attestation is recorded in the model's history. Attestation sign-offs are permanent and cannot be changed.
 
