--- a/site/guide/attestation/submit-attestations.qmd
+++ b/site/guide/attestation/submit-attestations.qmd
@@ -24,32 +24,34 @@ As a submitter, this process is part of the audit trail for your model's informa
 
 ## Steps
 
-1. In the left sidebar, click **{{< fa inbox >}} My Inbox**.
+::: {.column-margin}
+![Submitter view with questionnaire](attestations-submitter-filled.png){fig-alt="Attestation submission view showing questionnaire fields" .screenshot}
+:::
 
-2. Under **Tasks**, locate the attestation with a **Not Started** status.
+1. Access your attestation task using one of these methods:
 
-3. Click **Start attestation**.
+   - In the left sidebar, click **{{< fa clipboard-check >}} Attestations**, then click on your submission in the **Not Started** column.
+   - In the left sidebar, click **{{< fa inbox >}} My Inbox**, then under **Tasks**, locate the attestation with a **Not Started** status.
 
-4. Document the status change to [**{{< fa clipboard-check >}} In Progress**]{.bubble} in the [**notes**]{.small-caps} field and click **Confirm**.
+2. Click **Start Attestation**.
 
-   After you confirm the status change to [**{{< fa clipboard-check >}} In Progress**]{.bubble}, the attestation questionnaire is ready to be completed.
+   After you start the attestation, the questionnaire fields are available to complete.
 
-5. Complete the attestation questionnaire, including:
+3. Review the model context using the tabs on the left side of the screen:
 
-   - Checking all applicable boxes
-   - Answering each question 
-   - Adding relevant comments
+   - **Inventory** — Shows the models included in your attestation with snapshot details
+   - **Validation Issues** — Shows open validation issues for your models at the time of the snapshot
+   - **Artifacts** — Shows model artifacts captured in the snapshot
+
+4. Complete the attestation questionnaire by filling in each field. Required fields are marked with an asterisk (*).
 
    ::: {.callout}
-   Refer to the filtered views to ensure the attestation questionnaire is accurate:
-
-   - **{{< fa cubes >}} Inventory** — Shows model information and recent activity such as comments, status changes, updates and test results.
-   - **{{< fa border-all >}} Artifacts** — Shows model artifacts with details like title, severity, status, and due date.
+   Click on any model in the Inventory tab to view its snapshot details. Use the **View Live Data** link to navigate to the current model record if you need additional context.
    :::
 
-6. Verify that your answers are complete and click **Submit for Review**.
+5. Verify that your answers are complete and click **Submit for Review**.
 
-7. Document the status change in the [**notes**]{.small-caps} field for your reviewer and click **Confirm**.
+After you submit, the attestation is sent to your reviewer.
 
 After you confirm the status change, the attestation questionnaire is sent to your reviewer.
 
