--- a/site/guide/attestation/review-attestations.qmd
+++ b/site/guide/attestation/review-attestations.qmd
@@ -24,39 +24,37 @@ As a reviewer, you assess the submitter's attestation, including ownership, usag
 
 ## Steps
 
-1. In the left sidebar, click **{{< fa inbox >}} My Inbox**.
+::: {.column-margin}
+![Reviewer view with Accept/Reject options](attestations-reviewer-view.png){fig-alt="Attestation review view showing questionnaire responses and Accept/Reject buttons" .screenshot}
+:::
 
-2. Under **Tasks**, locate the attestation with a **Ready For Review** status.
+1. Access the attestation for review using one of these methods:
 
-3. Click on the attestation to open the questionnaire for review.
+   - In the left sidebar, click **{{< fa clipboard-check >}} Attestations**, then click on the submission in the **Ready for Review** column.
+   - In the left sidebar, click **{{< fa inbox >}} My Inbox**, then under **Tasks**, locate the attestation with a **Ready For Review** status.
 
-4. Optional: Click **{{< fa wifi >}} See Activity** to review:
+2. Review the submitter's questionnaire responses displayed on the right side of the screen.
 
-   - Who completed the different status changes for the attestation.
-   - When the attestation status changed.
-   - Notes that were provided to document the process.
+3. Review the model context using the tabs on the left:
 
-      If you previously rejected an attestation questionnaire, review the submitter's response on resubmission.
+   - **Inventory** — Shows the models included in the attestation with snapshot details
+   - **Validation Issues** — Shows open validation issues at the time of the snapshot
+   - **Artifacts** — Shows model artifacts captured in the snapshot
 
-5. Review the attestation questionnaire:
+4. Optional: Click **Activity** to review the attestation history:
 
-   - Check all applicable boxes have been checked.
-   - Check the answers to each question.
-   - Check the comments for accuracy and relevance.
+   - Who completed the different status changes
+   - When the attestation status changed
+   - Notes provided to document the process
 
-   ::: {.callout}
-   Refer to the filtered views to ensure the attestation questionnaire is accurate:
+   If you previously rejected an attestation, review the submitter's updated responses on resubmission.
 
-   - **{{< fa cubes >}} Inventory** — Shows model information and recent activity such as comments, status changes, updates and test results.
-   - **{{< fa border-all >}} Artifacts** — Shows model artifacts with details like title, severity, status, and due date.
-   :::
+5. Accept or reject the attestation:
 
-6. Accept or reject the attestation questionnaire:
+   - Click **Accept** to approve the submission and advance it to the approver.
+   - Click **Reject** to return the submission to the submitter for revisions.
 
-   - Click **Accept** to record the status change to [**{{< fa clipboard-check >}} Reviewed**]{.bubble} in the [**notes**]{.small-caps} field, then click **Confirm**.
-   - Click **Reject** to record the status change back to [**{{< fa clipboard-check >}} In progress**]{.bubble} in the [**notes**]{.small-caps} field, detail the requested changes, then click **Confirm**.
-
-      If you reject an attestation questionnaire, the submitter is prompted to revise the questionnaire and resubmit it. The platform maintains a history of all status changes and notes.
+   If you reject an attestation, the submitter is prompted to revise their responses and resubmit. The platform maintains a history of all status changes.
 
 After you accept the questionnaire, it is sent to the approver for final sign-off.[^5]
 
