--- a/site/guide/attestation/working-with-attestations.qmd
+++ b/site/guide/attestation/working-with-attestations.qmd
@@ -39,9 +39,24 @@ listing:
 
 {{< include /about/glossary/_attestation.qmd >}}
 
+### Where do I access attestations?
+
+When an attestation period is active or has been completed in the past, **{{< fa clipboard-check >}} Attestations** appears in the left sidebar. This centralized dashboard provides:
+
+- A swimlane view of all attestation submissions organized by status
+- Consolidated questionnaire responses across all submissions
+- Organization-wide snapshots of models, validation issues, and artifacts
+- Export capabilities for compliance reporting
+
+Attestation participants can also access their individual tasks via **{{< fa inbox >}} My Inbox** in the left sidebar, where tasks appear under the **Tasks** tab with the current attestation status.
+
+::: {.callout-note}
+The **Attestations** sidebar item only appears when there is at least one active or completed attestation period. If your organization has not yet configured attestations, this option is not visible.
+:::
+
 ### How does the attestation process work?
 
-Attestation on the {{< var validmind.platform >}} begins at the start of the attestation period after the process has been set up initially. The platform captures a snapshot of each model and its artifacts, preserving the state at that point in time. Changes made after the process starts do not affect the historical record.
+Attestation on the {{< var validmind.platform >}} begins at the start of the attestation period after the process has been set up initially. The platform captures a snapshot of each model and its artifacts, preserving the state at that point in time. A second snapshot is captured when the attestation period is completed, enabling comparative analysis between the start and end states.
 
 Responsibilities for the attestation process are shared:
 
@@ -67,10 +82,8 @@ graph TD
 :::
 
 ::: {.column-margin .mt5}
-![Sample attestations in progress](attestation-q1-attestation-progress.gif){fig-alt="Attestation progress" .screenshot}
+![Sample attestations in progress](attestations-dashboard-progress.png){fig-alt="Attestation progress showing swimlane view" .screenshot}
 :::
-
-Attestation participants access their tasks via **{{< fa inbox >}} My Inbox** in the left sidebar. Tasks appear under the **Tasks** tab with the current attestation status, also known as _attestation instances_.
 
 The submitter is responsible for completing the questionnaire and addressing change requests. The reviewer is responsible for reviewing the questionnaire and requesting any necessary changes. The approver is responsible for signing off on the questionnaire.
 
@@ -97,7 +110,9 @@ This approach ensures 100% accountability per group, where Emma approves all Fra
 
 ## How do I create meaningful attestation questionnaires?
 
-Attestation questionnaires are typically used in model risk management to confirm that key controls, governance processes and documentation requirements have been followed throughout a model's lifecycle. These questionnaires are part of a broader effort to ensure accountability and regulatory compliance. 
+Attestation questionnaires are typically used in model risk management to confirm that key controls, governance processes and documentation requirements have been followed throughout a model's lifecycle. These questionnaires are part of a broader effort to ensure accountability and regulatory compliance.
+
+Questionnaires are composed of structured fields that you define when configuring the attestation template. Each field can be a text input, dropdown, checkbox, or other field type, with optional validation rules. Responses are collected consistently across all submissions and can be viewed in the consolidated **Responses** tab or exported for external reporting.
 
 Areas typically covered in the questionnaire:
 
