Unbold UI elements

--- a/site/guide/attestation/manage-attestations.qmd
+++ b/site/guide/attestation/manage-attestations.qmd
@@ -54,7 +54,7 @@ For testing purposes only, you can trigger the attestation process:
 
 5. Click **Confirm**.
 
-After starting the schedule, attestation participants are notified via **My Inbox** that the attestation is ready to be completed.
+After starting the schedule, attestation participants are notified via My Inbox that the attestation is ready to be completed.
 
 ## Edit attestation periods
 
