--- a/site/guide/attestation/review-attestations.qmd
+++ b/site/guide/attestation/review-attestations.qmd
@@ -31,7 +31,7 @@ As a reviewer, you assess the submitter's attestation, including ownership, usag
 1. Access the attestation for review using one of these methods:
 
    - In the left sidebar, click **{{< fa clipboard-check >}} Attestations**, then click on the submission in the **Ready for Review** column.
-   - In the left sidebar, click **{{< fa inbox >}} My Inbox**, then under **Tasks**, locate the attestation with a **Ready For Review** status.
+   - In the left sidebar, click **{{< fa inbox >}} My Inbox**, then under Tasks, locate the attestation with a **Ready For Review** status.
 
 2. Review the submitter's questionnaire responses displayed on the right side of the screen.
 
