--- a/site/guide/attestation/submit-attestations.qmd
+++ b/site/guide/attestation/submit-attestations.qmd
@@ -31,7 +31,7 @@ As a submitter, this process is part of the audit trail for your model's informa
 1. Access your attestation task using one of these methods:
 
    - In the left sidebar, click **{{< fa clipboard-check >}} Attestations**, then click on your submission in the **Not Started** column.
-   - In the left sidebar, click **{{< fa inbox >}} My Inbox**, then under **Tasks**, locate the attestation with a **Not Started** status.
+   - In the left sidebar, click **{{< fa inbox >}} My Inbox**, then under Tasks, locate the attestation with a **Not Started** status.
 
 2. Click **Start Attestation**.
 
