--- a/site/guide/attestation/working-with-attestations.qmd
+++ b/site/guide/attestation/working-with-attestations.qmd
@@ -48,10 +48,10 @@ When an attestation period is active or has been completed in the past, **{{< fa
 - Organization-wide snapshots of models, validation issues, and artifacts
 - Export capabilities for compliance reporting
 
-Attestation participants can also access their individual tasks via **{{< fa inbox >}} My Inbox** in the left sidebar, where tasks appear under the **Tasks** tab with the current attestation status.
+Attestation participants can also access their individual tasks via **{{< fa inbox >}} My Inbox** in the left sidebar, where tasks appear under the Tasks tab with the current attestation status.
 
 ::: {.callout-note}
-The **Attestations** sidebar item only appears when there is at least one active or completed attestation period. If your organization has not yet configured attestations, this option is not visible.
+The Attestations sidebar item only appears when there is at least one active or completed attestation period. If your organization has not yet configured attestations, this option is not visible.
 :::
 
 ### How does the attestation process work?
@@ -112,7 +112,7 @@ This approach ensures 100% accountability per group, where Emma approves all Fra
 
 Attestation questionnaires are typically used in model risk management to confirm that key controls, governance processes and documentation requirements have been followed throughout a model's lifecycle. These questionnaires are part of a broader effort to ensure accountability and regulatory compliance.
 
-Questionnaires are composed of structured fields that you define when configuring the attestation template. Each field can be a text input, dropdown, checkbox, or other field type, with optional validation rules. Responses are collected consistently across all submissions and can be viewed in the consolidated **Responses** tab or exported for external reporting.
+Questionnaires are composed of structured fields that you define when configuring the attestation template. Each field can be a text input, dropdown, checkbox, or other field type, with optional validation rules. Responses are collected consistently across all submissions and can be viewed in the consolidated Responses tab or exported for external reporting.
 
 Areas typically covered in the questionnaire:
 
