--- a/site/guide/attestation/manage-attestations.qmd
+++ b/site/guide/attestation/manage-attestations.qmd
@@ -96,10 +96,6 @@ This action cannot be undone. The history of previous attestation periods is una
 
 When an attestation period is active or completed, the **{{< fa clipboard-check >}} Attestations** item appears in the left sidebar. This dashboard provides a centralized view for tracking, reviewing, and exporting attestation data.
 
-::: {.column-margin}
-![Attestations dashboard showing progress](attestations-dashboard-progress.png){fig-alt="Attestations dashboard showing swimlane progress view" .screenshot}
-:::
-
 To access the dashboard:
 
 1. In the left sidebar, click **{{< fa clipboard-check >}} Attestations**.
@@ -114,11 +110,11 @@ The dashboard organizes information across five tabs:
 
 The Progress tab displays a swimlane view of all attestation submissions organized by status:
 
-- **Not Started** — Submissions awaiting action from submitters
-- **In Progress** — Submissions currently being completed
-- **Ready for Review** — Submissions awaiting reviewer action
-- **Reviewed** — Submissions awaiting approver sign-off
-- **Signed Off** — Completed submissions
+- **Not Started** — Submissions awaiting action from submitters.
+- **In Progress** — Submissions currently being completed.
+- **Ready for Review** — Submissions awaiting reviewer action.
+- **Reviewed** — Submissions awaiting approver sign-off.
+- **Signed Off** — Completed submissions.
 
 Click any submission card to view its details, including the questionnaire responses and associated models.
 
@@ -132,9 +128,9 @@ The Responses tab provides a consolidated view of all questionnaire responses ac
 
 Use this view to:
 
-- Review all submissions at a glance
-- Compare responses across different submitters
-- Export responses for compliance reporting
+- Review all submissions at a glance.
+- Compare responses across different submitters.
+- Export responses for compliance reporting.
 
 ### Inventory
 
@@ -189,10 +185,6 @@ When all submissions in an attestation period have been signed off, the period i
 When a period is completed, the platform captures a final snapshot of all models and artifacts. This enables before/after comparison in the Inventory tab.
 :::
 
-::: {.column-margin}
-![Complete Period option](attestations-complete-period.png){fig-alt="Complete Period option in attestation settings" .screenshot}
-:::
-
 To manually complete an attestation period:
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
@@ -209,10 +201,6 @@ After completing a period, no further actions can be taken on any submissions, r
 
 ## Delete attestation templates
 
-::: {.column-margin}
-![Delete template option](attestations-delete-template.png){fig-alt="Delete option for attestation templates" .screenshot}
-:::
-
 Remove attestation templates that are no longer needed. When a template is deleted, all related data including schedules, executions, and snapshots is automatically cleaned up.
 
 ::: {.callout-important title="Deletion is blocked for active periods"}
@@ -223,9 +211,9 @@ You cannot delete an attestation template if it has any active attestation perio
 
 2. Under Workspace, select **Attestation Templates**.
 
-3. Locate the template to delete and click **{{< fa ellipsis-vertical >}}**.
+3. Locate the template to delete and hover over it.
 
-4. Select [**{{< fa trash >}} Delete**]{.red}.
+4. When **{{< fa ellipsis-vertical >}}** appears, select [**{{< fa trash >}} Delete**]{.red}.
 
 5. Click **Confirm** to delete the template.
 
