--- a/site/guide/attestation/review-attestations.qmd
+++ b/site/guide/attestation/review-attestations.qmd
@@ -37,15 +37,15 @@ As a reviewer, you assess the submitter's attestation, including ownership, usag
 
 3. Review the model context using the tabs on the left:
 
-   - **Inventory** — Shows the models included in the attestation with snapshot details
-   - **Validation Issues** — Shows open validation issues at the time of the snapshot
-   - **Artifacts** — Shows model artifacts captured in the snapshot
+   - **Inventory** — Shows the models included in the attestation with snapshot details.
+   - **Validation Issues** — Shows open validation issues at the time of the snapshot.
+   - **Artifacts** — Shows model artifacts captured in the snapshot.
 
 4. Optional: Click **Activity** to review the attestation history:
 
-   - Who completed the different status changes
-   - When the attestation status changed
-   - Notes provided to document the process
+   - Who completed the different status changes.
+   - When the attestation status changed.
+   - Notes provided to document the process.
 
    If you previously rejected an attestation, review the submitter's updated responses on resubmission.
 
