--- a/site/guide/attestation/submit-attestations.qmd
+++ b/site/guide/attestation/submit-attestations.qmd
@@ -39,9 +39,9 @@ As a submitter, this process is part of the audit trail for your model's informa
 
 3. Review the model context using the tabs on the left side of the screen:
 
-   - **Inventory** — Shows the models included in your attestation with snapshot details
-   - **Validation Issues** — Shows open validation issues for your models at the time of the snapshot
-   - **Artifacts** — Shows model artifacts captured in the snapshot
+   - **Inventory** — Shows the models included in your attestation with snapshot details.
+   - **Validation Issues** — Shows open validation issues for your models at the time of the snapshot.
+   - **Artifacts** — Shows model artifacts captured in the snapshot.
 
 4. Complete the attestation questionnaire by filling in each field. Required fields are marked with an asterisk (*).
 
