--- a/site/guide/attestation/working-with-attestations.qmd
+++ b/site/guide/attestation/working-with-attestations.qmd
@@ -41,6 +41,11 @@ listing:
 
 ### Where do I access attestations?
 
+<!-- NR TO DO Ask Steven for better screenshot -->
+::: {.column-margin .mt5}
+![Sample attestations in progress](attestations-dashboard-progress.png){fig-alt="Attestation progress showing swimlane view" .screenshot}
+:::
+
 When an attestation period is active or has been completed in the past, **{{< fa clipboard-check >}} Attestations** appears in the left sidebar. This centralized dashboard provides:
 
 - A swimlane view of all attestation submissions organized by status
@@ -62,7 +67,7 @@ Responsibilities for the attestation process are shared:
 
 ::: {.tc}
 ```{mermaid}
-graph TD
+graph LR
     subgraph Submitter
         A["**Not Started**"] --> B["**In Progress**"]
         B --> C["**Ready for Review**"]
@@ -81,10 +86,6 @@ graph TD
 [The attestation process — Submitter, reviewer, and approver responsibilities]{.silver .small}
 :::
 
-::: {.column-margin .mt5}
-![Sample attestations in progress](attestations-dashboard-progress.png){fig-alt="Attestation progress showing swimlane view" .screenshot}
-:::
-
 The submitter is responsible for completing the questionnaire and addressing change requests. The reviewer is responsible for reviewing the questionnaire and requesting any necessary changes. The approver is responsible for signing off on the questionnaire.
 
 Plan your attestation periods ahead of time to ensure they can be completed on time. The start date must be today or a future date, and you cannot set a date in the past to trigger attestation retroactively.
@@ -94,11 +95,11 @@ Plan your attestation periods ahead of time to ensure they can be completed on t
 Attestation submissions are organized by owner AND group. This structure supports organizations where:
 
 - Model owners may own models across multiple groups, such as Fraud and Know-Your-Customer (KYC).
-- Each group has its own validation and governance team
-- Reviewers and approvers are roles scoped to specific groups
+- Each group has its own validation and governance team.
+- Reviewers and approvers are roles scoped to specific groups.
 
 ::: {.callout title="Example scenario"}
-Steven owns 10 models: 4 in the Fraud group and 6 in the KYC group. Emma is the Governance Lead for Fraud, and Fernanda is the Governance Lead for KYC.
+Steven owns 10 models: 4 in the Fraud group and 6 in the KYC group. Emma is the Governance Lead for Fraud, and Kam is the Governance Lead for KYC.
 
 If attestations were organized by owner alone, neither Emma nor Fernanda would have permissions to see all of Steven's models. With owner+group organization:
 
