--- a/site/guide/attestation/manage-attestations.qmd
+++ b/site/guide/attestation/manage-attestations.qmd
@@ -135,7 +135,7 @@ Use this view to:
 ### Inventory
 
 ::: {.column-margin}
-![Inventory snapshot](attestations-dashboard-inventory.png){fig-alt="Attestations dashboard showing inventory snapshot" .screenshot}
+![Before and after snapshot comparison](attestations-before-after.png){fig-alt="Before and after toggle for comparing snapshots" .screenshot width=50%}
 :::
 
 The Inventory tab shows a snapshot of all models included in the attestation scope at the time the period started. This provides an organization-wide view of the model inventory state.
@@ -144,7 +144,6 @@ Click any model to view its snapshot details in a modal, which displays the mode
 
 For completed attestation periods, use the **Before** and **After** toggle to compare the model state at the start versus the completion of the period.
 
-![Before and after snapshot comparison](attestations-before-after.png){fig-alt="Before and after toggle for comparing snapshots" .screenshot width=50%}
 
 ### Validation Issues
 
@@ -171,7 +170,7 @@ Export attestation data in CSV or Excel format for external reporting and compli
 
 1. Navigate to the **{{< fa clipboard-check >}} Attestations** dashboard.
 
-2. Select the tab containing the data to export (Progress, Responses, Inventory, Validation Issues, or Artifacts).
+2. Select the tab containing the data to export: Progress, Responses, Inventory, Validation Issues, or Artifacts.
 
 3. Click **{{< fa download >}} Export** in the upper right.
 
