--- a/site/guide/attestation/submit-attestations.qmd
+++ b/site/guide/attestation/submit-attestations.qmd
@@ -24,10 +24,6 @@ As a submitter, this process is part of the audit trail for your model's informa
 
 ## Steps
 
-::: {.column-margin}
-![Submitter view with questionnaire](attestations-submitter-filled.png){fig-alt="Attestation submission view showing questionnaire fields" .screenshot}
-:::
-
 1. Access your attestation task using one of these methods:
 
    - In the left sidebar, click **{{< fa clipboard-check >}} Attestations**, then click on your submission in the **Not Started** column.
@@ -51,11 +47,7 @@ As a submitter, this process is part of the audit trail for your model's informa
 
 5. Verify that your answers are complete and click **Submit for Review**.
 
-After you submit, the attestation is sent to your reviewer.
-
-After you confirm the status change, the attestation questionnaire is sent to your reviewer.
-
-If your reviewer rejects your attestation questionnaire, you will need to revise your responses and resubmit for review. The platform maintains a history of all status changes and notes.
+After you submit, the attestation is sent to your reviewer. The platform maintains a history of all status changes and notes. If your reviewer rejects your attestation questionnaire, you will need to revise your responses and resubmit for review.
 
 <!-- FOOTNOTES -->
 
