--- a/site/guide/attestation/working-with-attestations.qmd
+++ b/site/guide/attestation/working-with-attestations.qmd
@@ -101,12 +101,12 @@ Attestation submissions are organized by owner AND group. This structure support
 ::: {.callout title="Example scenario"}
 Steven owns 10 models: 4 in the Fraud group and 6 in the KYC group. Emma is the Governance Lead for Fraud, and Kam is the Governance Lead for KYC.
 
-If attestations were organized by owner alone, neither Emma nor Fernanda would have permissions to see all of Steven's models. With owner+group organization:
+If attestations were organized by owner alone, neither Emma nor Kam would have permissions to see all of Steven's models. With owner+group organization:
 
 - Steven submits Attestation #1 for his 4 Fraud models → Emma approves
-- Steven submits Attestation #2 for his 6 KYC models → Fernanda approves
+- Steven submits Attestation #2 for his 6 KYC models → Kam approves
 
-This approach ensures 100% accountability per group, where Emma approves all Fraud models and Fernanda approves all KYC models. If Fraud has two co-leads (Emma and Andres), either can approve.
+This approach ensures 100% accountability per group, where Emma approves all Fraud models and Kam approves all KYC models. If Fraud has two co-leads (Emma and Andres), either can approve.
 :::
 
 ## How do I create meaningful attestation questionnaires?
