User Action v2 mulitple steps setup

--- a/site/guide/workflows/_conditional-requirements.qmd
+++ b/site/guide/workflows/_conditional-requirements.qmd
@@ -26,11 +26,18 @@ Conditional requirements are required or optional for the following step types:^
     - Click **{{< fa plus >}} Add Rule** to add an independent rule.
     - Click **{{< fa plus-minus >}} Add Group** to add a linked group of rules that all must be true to qualify.
 
-#### Require model inventory fields
+#### Request model inventory fields
 
 - Select any **[requested fields]{.smallcaps}**^[[Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)] to be entered by users during the action.
 
-- **Toggle Optional** to on if the field should be optional and not required.
+    **Toggle Optional** to ON if the field should be optional and not required.
+
+- (Optional) Present these requested fields to users in steps:
+
+    i. Click **{{< fa plus >}} Add Step** to add a step.
+    ii. On the Add Step modal that appears, enter in the step **[title]{.smallcaps}** and provide an optional **[description]{.smallcaps}**.
+    iii. Click **Save** to insert the step.
+    iv. Drag request fields into a step to add them to that step.
 
 #### Enable user action deadline
 
