--- a/site/guide/workflows/_transition-workflows.qmd
+++ b/site/guide/workflows/_transition-workflows.qmd
@@ -24,7 +24,7 @@ To transition a workflow into next steps:
 1. If an action is available to your role, you'll see it listed under that workflow:
 
     - Click **{{< fa arrow-right >}}** to open up the transition panel for your selected action. This arrow will be followed by the action name.
-    - Enter your **[notes]{.smallcaps}** and any other additional inventory fields^[[Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)] then click **Submit**.
+    - Enter your **[notes]{.smallcaps}** and/or any other additional inventory fields^[[Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)] then click **{action}** where `action` is the name of your custom user action.
 
 #### On artifacts
 
@@ -33,7 +33,7 @@ To transition a workflow into next steps:
 1. If an action is available to your role, you'll see it listed under that workflow:
 
     - Click **{{< fa arrow-right >}}** to open up the transition panel for your selected action. This arrow will be followed by the action name.
-    - Enter your **[notes]{.smallcaps}** and any other additional inventory fields^[[Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)] then click **Submit**.
+    - Enter your **[notes]{.smallcaps}** and/or any other additional inventory fields^[[Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)] then click **{action}** where `action` is the name of your custom user action.
 
 :::
 
@@ -52,7 +52,7 @@ To transition a workflow into next steps on models:
 1. If an action is available to your role, you'll see it listed under that workflow:
 
     - Click **{{< fa arrow-right >}}** to open up the transition panel for your selected action. This arrow will be followed by the action name.
-    - Enter your **[notes]{.smallcaps}** and any other additional inventory fields then click **Submit**.
+    - Enter your **[notes]{.smallcaps}** and/or any other additional inventory fields then click **{action}** where `action` is the name of your custom user action.
 
 ::::
 
@@ -71,7 +71,7 @@ To transition a workflow into next steps:
 1. If an action is available to your role, you'll see it listed under that workflow:
 
     - Click **{{< fa arrow-right >}}** to open up the transition panel for your selected action. This arrow will be followed by the action name.
-    - Enter your **[notes]{.smallcaps}** and any other additional inventory fields then click **Submit**.
+    - Enter your **[notes]{.smallcaps}** and/or any other additional inventory fields then click **{action}** where `action` is the name of your custom user action.
 
 #### On artifacts
 
@@ -80,7 +80,7 @@ To transition a workflow into next steps:
 1. If an action is available to your role, you'll see it listed under that workflow:
 
     - Click **{{< fa arrow-right >}}** to open up the transition panel for your selected action. This arrow will be followed by the action name.
-    - Enter your **[notes]{.smallcaps}** and any other additional inventory fields then click **Submit**.
+    - Enter your **[notes]{.smallcaps}** and/or any other additional inventory fields then click **{action}** where `action` is the name of your custom user action.
 
 ::::
 
