Using VM for Model Risk Management > Risk Management

--- a/site/training/administrator-fundamentals/administrator-fundamentals-register.qmd
+++ b/site/training/administrator-fundamentals/administrator-fundamentals-register.qmd
@@ -29,8 +29,8 @@ listing:
       description: "{{< fa check >}} Configure model inventory & artifact (finding) fields <br> {{< fa check >}} Customize document templates <br> {{< fa check >}} Configure reusable blocks"
       reading-time: "30"
       author: "{{< var vm.product >}}"
-    - path: using-validmind-for-model-risk-management.html
-      title: "Using {{< var vm.product >}} for Model Risk Management"
+    - path: using-validmind-for-risk-management.html
+      title: "Using {{< var vm.product >}} for Risk Management"
       subtitle: "Module 3"
       description: "{{< fa check >}} Set up and manage custom workflows <br> {{< fa check >}} Manage regulations and policies <br> {{< fa check >}} Set up attestations"
       reading-time: "50"
