--- a/site/training/administrator-fundamentals/using-validmind-for-risk-management.qmd
+++ b/site/training/administrator-fundamentals/using-validmind-for-risk-management.qmd
@@ -2,7 +2,7 @@
 # Copyright © 2023-2026 ValidMind Inc. All rights reserved.
 # Refer to the LICENSE file in the root of this repository for details.
 # SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial
-title: "Using {{< var vm.product >}} for <br>Model Risk Management"
+title: "Using {{< var vm.product >}} for <br>Risk Management"
 subtitle: "Administrator Fundamentals — Module 3 of 4<br><br>_Click [{{< fa chevron-right >}}](#learning-objectives) to start_"
 lightbox: true
 format:
@@ -26,12 +26,14 @@ format:
       - slideover
   html:
   # Change this to the file name prepended by a _ to get around the global HTML output settings required by _metadata.yml
-    output-file: _using-validmind-for-model-risk-management.html
+    output-file: _using-validmind-for-risk-management.html
     search: false
 title-slide-attributes:
   data-background-color: "#083E44"
   data-background-image: "../assets/home-hero.svg"
 skip_preview: true
+  aliases:
+  - /training/administrator-fundamentals/using-validmind-for-model-risk-management.html
 ---
 
 # Learning objectives {.center}
