--- a/site/training/program/learning-paths.qmd
+++ b/site/training/program/learning-paths.qmd
@@ -56,7 +56,7 @@ Learn how to use {{< var vm.product >}} as an **administrator** to onboard your 
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-50-ns}
-#### <sup>Module 3</sup><br> Using {{< var vm.product >}} for Model Risk Management
+#### <sup>Module 3</sup><br> Using {{< var vm.product >}} for Risk Management
 - Set up and manage custom workflows
 - Manage regulations and policies
 - Set up attestations
