--- a/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
+++ b/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
@@ -607,5 +607,5 @@ In this second module, you learned how to:
 Continue your {{< var vm.platform >}} administration journey with:
 <br><br>
 <!-- IMPORTANT: USE THE .HTML PATH AND NOT THE .QMD PATH FOR THE REVEALJS OUTPUT -->
-[{{< var vm.product >}} for Model Risk Management](using-validmind-for-model-risk-management.html){.button target="_blank"}
+[{{< var vm.product >}} for Risk Management](using-validmind-for-risk-management.html){.button target="_blank"}
 :::
